<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:padding="4dp"
        android:layout_margin="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <Button
        android:id="@+id/loading_sweetalert"
        android:padding="4dp"
        android:layout_margin="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading_sweetalert"/>

    <Button
        android:id="@+id/basic_sweetalert"
        android:padding="4dp"
        android:layout_margin="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basic_sweetalert"/>

    <Button
        android:id="@+id/error_sweetalert"
        android:padding="4dp"
        android:layout_margin="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_sweetalert"/>

    <Button
        android:id="@+id/delete_confirmation_sweetalert"
        android:padding="4dp"
        android:layout_margin="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_confirmation_sweetalert"/>

    <Button
        android:id="@+id/custom_sweetalert"
        android:padding="4dp"
        android:layout_margin="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_sweetalert"/>

</LinearLayout>